force-app/main/default/objects/Student__c/fields/Hostel__c.field-meta.xml
<CustomField>
    <fullName>Hostel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hostel</label>
    <type>Checkbox</type>
</CustomField>