force-app/main/default/objects/Student__c/fields/Parent_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Mobile_Number__c</fullName>
    <label>Parent Mobile Number</label>
    <type>Phone</type>
</CustomField>