force-app/main/default/objects/Student__c/fields/Sports__c.field-meta.xml
<CustomField>
    <fullName>Sports__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sports</label>
    <referenceTo>Sport__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>