force-app/main/default/objects/Student__c/fields/Total_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Fee__c</fullName>
    <label>Total Fee</label>
    <summarizedField>Fee__c.TotalFee__c</summarizedField>
    <summaryForeignKey>Fee__c.StudentFee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>