force-app/main/default/objects/Student__c/fields/Total_Marks__c.field-meta.xml
<CustomField>
    <fullName>Total_Marks__c</fullName>
    <label>Total Marks</label>
    <summarizedField>Results__c.Total_Marks__c</summarizedField>
    <summaryForeignKey>Results__c.Student__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>