force-app/main/default/objects/Student__c/validationRules/Contact_Number_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Number_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISBLANK( Emergency_Contact_Number__c ) ,ISBLANK(  Parent_Mobile_Number__c  ))</errorConditionFormula>
    <errorMessage>Please enter both Emergency and Parent mobile numbers</errorMessage>
</ValidationRule>