force-app/main/default/objects/Student__c/validationRules/Email_Field_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Field_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISBLANK( Student_Email__c ) ,ISBLANK( Parent_Email__c  ))</errorConditionFormula>
    <errorMessage>Please enter both Student Email &amp; Parent Email</errorMessage>
</ValidationRule>