force-app/main/default/objects/Student__c/validationRules/Hostel_Or_Transport_Opt_One.validationRule-meta.xml
<ValidationRule>
    <fullName>Hostel_Or_Transport_Opt_One</fullName>
    <active>true</active>
    <errorConditionFormula>Hostel__c  == true &amp;&amp;  Transportation__c  == true</errorConditionFormula>
    <errorMessage>Please Choose either Hostel or Transportation but not both</errorMessage>
</ValidationRule>